# 3D-Model-Viewer

./: .gitignore  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  ModelViewer.cpp
examples/Shaders/: ModelFShader.fs  ModelVShader.vs
main/: main.cpp
src/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  Mouse.cpp  Mouse.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp  main.cpp  utils.cpp  utils.hpp
src/Shaders/: CubeMapVShader.vs  ModelFShader.fs  ModelVShader.vs
tests/: CMakeLists.txt  ModelTest.cpp
